--- a/MyFirstWebsiteSkeleton.html
+++ b/MyFirstWebsiteSkeleton.html
@@ -10,9 +10,58 @@
 <script src="http://fb.me/JSXTransformer-0.12.1.js"></script>
 <script type="text/jsx">
 
+var App = React.createClass({
+     render: function(){
+         return (
+                 <div>
+                   <!-- contents will go here -->
+                 </div>
+         );
+     }
+});
 
-<!--ADD CODE HERE-->
+var Nav = React.createClass({
+     render: function(){
+         return (
+                 <div>
+                   <!-- contents will go here -->
+                 </div>
+         );
+     }
+});
 
+var Intro = React.createClass({
+     render: function(){
+         return (
+                 <div>
+                   <!-- contents will go here -->
+                 </div>
+         );
+     }
+});
+
+
+var Gif = React.createClass({
+     render: function(){
+         return (
+                 <div>
+                   <!-- contents will go here -->
+                 </div>
+         );
+     }
+});
+
+var Social = React.createClass({
+     render: function(){
+         return (
+                 <div>
+                   <!-- contents will go here -->
+                 </div>
+         );
+     }
+});
+
+ReactDOM.render(<App />, document.getElementById('content'));
 
 </script>
 </body>
