--- a/Skeleton.html
+++ b/Skeleton.html
@@ -14,7 +14,7 @@ var App = React.createClass({
      render: function(){
          return (
                  <div>
-                   <!-- contents will go here -->
+                     <h1>This is my first webpage. </h1>
                  </div>
          );
      }
@@ -24,7 +24,6 @@ var Nav = React.createClass({
      render: function(){
          return (
                  <div>
-                   <!-- contents will go here -->
                  </div>
          );
      }
@@ -34,7 +33,6 @@ var Intro = React.createClass({
      render: function(){
          return (
                  <div>
-                   <!-- contents will go here -->
                  </div>
          );
      }
@@ -45,7 +43,6 @@ var Gif = React.createClass({
      render: function(){
          return (
                  <div>
-                   <!-- contents will go here -->
                  </div>
          );
      }
@@ -55,7 +52,6 @@ var Social = React.createClass({
      render: function(){
          return (
                  <div>
-                   <!-- contents will go here -->
                  </div>
          );
      }
