--- a/Skeleton.html
+++ b/Skeleton.html
@@ -14,7 +14,7 @@ var App = React.createClass({
      render: function(){
          return (
                  <div>
-                     <h1>This is my first webpage. </h1>
+                     <h1>This is my first website. </h1>
                  </div>
          );
      }
