--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@ var App = React.createClass({
      render: function(){
          return (
                  <div>
-                     <h1>This is my first website. </h1>
+                    <Nav />
+                    <Intro />
+                    <Gif />
+                    <Social />
                  </div>
          );
      }
@@ -24,6 +27,9 @@ var Nav = React.createClass({
      render: function(){
          return (
                  <div>
+                    <a href="index.html">Home &emsp;</a>
+                    <a href="About.html">About &emsp;</a>
+                    <a href="Contact.html">Contact &emsp;</a>
                  </div>
          );
      }
@@ -33,6 +39,8 @@ var Intro = React.createClass({
      render: function(){
          return (
                  <div>
+                    <h1>Hi.</h1>
+                    I'm Brianna. Nice to meet you.
                  </div>
          );
      }
@@ -43,6 +51,7 @@ var Gif = React.createClass({
      render: function(){
          return (
                  <div>
+                    <img src="giphy.gif" />
                  </div>
          );
      }
@@ -52,6 +61,27 @@ var Social = React.createClass({
      render: function(){
          return (
                  <div>
+                         <a href="https://www.facebook.com/brianna.lerman">
+					<img title="Facebook" 
+					 alt="Facebook" 
+					 src="https://socialmediawidgets.files.wordpress.com/2014/03/02_facebook1.png" 
+					 width="35" 
+					 height="35" />
+					</a>
+					<a href="https://www.linkedin.com/in/briannalerman/">
+					<img title="LinkedIn" 
+					 alt="LinkedIn" 
+					 src="https://socialmediawidgets.files.wordpress.com/2014/03/07_linkedin1.png" 
+					 width="35" 
+					 height="35" />
+					</a>
+					<a href="https://medium.com/@briannalerman">
+					<img title="Medium" 
+					 alt="Medium" 
+					 src="med.png" 
+					 width="35" 
+					 height="35" />
+					</a>     
                  </div>
          );
      }
