--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ var Nav = React.createClass({
      render: function(){
          return (
                  <div>
-                    <a href="index.html">Home &emsp;</a>
-                    <a href="About.html">About &emsp;</a>
-                    <a href="Contact.html">Contact &emsp;</a>
+                    <a href="index.html">Home</a> &emsp;&emsp;
+                    <a href="About.html">About</a> &emsp;&emsp;
+                    <a href="Contact.html">Contact</a> &emsp;&emsp;
                  </div>
          );
      }
